<resources>
    <string name="app_name">Tymes</string>
    <string name="api_key">pdnmcwr96vas</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="email_address">Email@address</string>
    <string name="location">Location</string>
    <string name="user_picture">User Picture</string>
    <string name="bio">Biography</string>
    <string name="skills">Skills</string>
    <string name="webpage">Webpage</string>
    <string name="username">Username</string>
    <string name="user_profile_image_button">Change Profile Picture</string>
    <string name="edit_user_fullname">Your Full Name, e.g. Davide Tymes</string>
    <string name="edit_user_nickname">Your Nickname, e.g. Dave</string>
    <string name="edit_user_username">Your Username, e.g. dave_tymes</string>
    <string name="edit_user_bio">A Brief Biography About You!</string>
    <string name="edit_user_skills">Your Skills, e.g. Kotlin Programming</string>
    <string name="edit_user_location">Your Location, e.g. Torino, Italy</string>
    <string name="edit_user_email">Your E-Mail, e.g. davetymes@polito.it</string>
    <string name="edit_user_webpage">Your Webpage, e.g. Github, LinkedIn, …</string>
    <string name="edit_ad_skill">Service, e.g. Cooking</string>
    <string name="edit_ad_author">Author</string>
    <string name="edit_ad_description">Brief Description</string>
    <string name="edit_ad_price">Service Reward (TYC)</string>
    <string name="edit_ad_location">Location, e.g. Torino, Italy</string>
    <string name="edit_ad_date">Date</string>


    <string name="edit_pencil_button">edit</string>
    <string name="edit_context_menu_select">Select Picture From Gallery</string>
    <string name="edit_context_menu_camera">Take Picture Using The Camera</string>
    <string name="edit_title">The Title Of Your Advert</string>
    <string name="edit_description">A Brief Description Of What You Are Looking For</string>
    <string name="edit_datetime">When Do You Want It To Be Done?</string>
    <string name="edit_duration">How Long Does It Take?</string>
    <string name="edit_location">Where Is It Happening?</string>
    <string name="edit_regularity">Do You Expect Any Regularity?</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="datetime">Datetime</string>
    <string name="duration">Duration</string>
    <string name="regularity">Regularity</string>
    <string name="pick_time">Pick Time</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="ad_types">
        <item>Offer</item>
        <item>Request</item>
    </string-array>

</resources>